--- a/rebar.config
+++ b/rebar.config
@@ -13,7 +13,7 @@
 ]}.
 
 {post_hooks, [
-	{"(linux|darwin|solaris)", clean, "rm -rf \"${REBAR_ROOT_DIR}/_build\" \"${REBAR_ROOT_DIR}/priv\""},
+    {"(linux|darwin|solaris)", clean, "rm -rf \"${REBAR_ROOT_DIR}/_build\" \"${REBAR_ROOT_DIR}/priv\""},
     {"(linux|darwin|solaris)", compile, "echo 'Post-compile hooks executed'"}
 ]}.
 
@@ -31,11 +31,12 @@
 {deps, [
     {b64fast, {git, "https://github.com/ArweaveTeam/b64fast.git", {ref, "58f0502e49bf73b29d95c6d02460d1fb8d2a5273"}}},
     {jiffy, {git, "https://github.com/ArweaveTeam/jiffy.git", {ref, "74c956defa9116c85d76f77c3e9b5bd6de7bd39a"}}},
-    {cowboy, {git, "https://github.com/ninenines/cowboy", {tag, "2.12.0"}}}
+    {cowboy, {git, "https://github.com/ninenines/cowboy", {tag, "2.12.0"}}},
+    {rocksdb, "1.8.0"}
 ]}.
 
 {shell, [
-    {apps, [ao]}
+    {apps, []}
 ]}.
 
 {eunit, [
