chore(metrics): extend hb_metrics to abstract prometheus metrics
Create hb_metrics process that abstracts metrics subsystem implementation
and exposes the API for registering and interacting with metrics.

--- a/rebar.config
+++ b/rebar.config
@@ -45,11 +45,13 @@
 ]}.
 
 {shell, [
-	{apps, [hb]}
+	{apps, [hb]},
+	{config, "./config/sys.config"}
 ]}.
 
 {eunit, [
-	{apps, [hb]}
+	{apps, [hb]},
+	{config, "./config/sys.config"}
 ]}.
 
 {eunit_opts, [verbose]}.
