feat(metrics): introduce Erlnag VM metrics
- use prometheus and prometheus_cowboy libraries to expose node
  metrics via /metrics endpoint;
- introduce custom `ao_metrics_collector` that allows collecting
  application-specific metrics (Load average and Uptime);
- introduce docker-compose setup that allows bringing up local
  infrastructure for Prometheus and Grafana
  (+ dashboard defined in JSON) on local machines

--- a/rebar.config
+++ b/rebar.config
@@ -2,58 +2,60 @@
 {plugins, [pc]}.
 
 {project_plugins, [
-    {erlfmt, {git, "https://github.com/TillaTheHun0/erlfmt", {branch, "main"}}}
+	{erlfmt, {git, "https://github.com/TillaTheHun0/erlfmt", {branch, "main"}}}
 ]}.
 {erlfmt, [
-    write,
-    {print_width, 120}
+	write,
+	{print_width, 120}
 ]}.
 
 {pre_hooks, [
-    {compile, "make -C \"${REBAR_ROOT_DIR}\" wamr"}
+	{compile, "make -C \"${REBAR_ROOT_DIR}\" wamr"}
 ]}.
 
 {port_env, [
-    {"(linux|darwin|solaris)", "CFLAGS",
-        "$CFLAGS -I${REBAR_ROOT_DIR}/_build/wamr/core/iwasm/include -I/usr/local/lib/erlang/usr/include/"},
-    {"(linux|darwin|solaris)", "LDFLAGS", "$LDFLAGS -L${REBAR_ROOT_DIR}/_build/wamr/lib -lvmlib -lei"},
-    {"(linux|darwin|solaris)", "LDLIBS", "-lei"}
+	{"(linux|darwin|solaris)", "CFLAGS",
+		"$CFLAGS -I${REBAR_ROOT_DIR}/_build/wamr/core/iwasm/include -I/usr/local/lib/erlang/usr/include/"},
+	{"(linux|darwin|solaris)", "LDFLAGS", "$LDFLAGS -L${REBAR_ROOT_DIR}/_build/wamr/lib -lvmlib -lei"},
+	{"(linux|darwin|solaris)", "LDLIBS", "-lei"}
 ]}.
 
 {post_hooks, [
-    {"(linux|darwin|solaris)", clean, "rm -rf \"${REBAR_ROOT_DIR}/_build\" \"${REBAR_ROOT_DIR}/priv\""},
-    {"(linux|darwin|solaris)", compile, "echo 'Post-compile hooks executed'"}
+	{"(linux|darwin|solaris)", clean, "rm -rf \"${REBAR_ROOT_DIR}/_build\" \"${REBAR_ROOT_DIR}/priv\""},
+	{"(linux|darwin|solaris)", compile, "echo 'Post-compile hooks executed'"}
 ]}.
 
 {provider_hooks, [
-    {post, [
-        {compile, {pc, compile}},
-        {clean, {pc, clean}}
-    ]}
+	{post, [
+		{compile, {pc, compile}},
+		{clean, {pc, clean}}
+	]}
 ]}.
 
 {port_specs, [
-    {"./priv/hb_beamr.so", ["./c_src/hb_beamr.c"]}
+	{"./priv/hb_beamr.so", ["./c_src/hb_beamr.c"]}
 ]}.
 
 {deps, [
-    {b64fast, {git, "https://github.com/ArweaveTeam/b64fast.git", {ref, "58f0502e49bf73b29d95c6d02460d1fb8d2a5273"}}},
-    {jiffy, {git, "https://github.com/ArweaveTeam/jiffy.git", {ref, "74c956defa9116c85d76f77c3e9b5bd6de7bd39a"}}},
-    {cowboy, {git, "https://github.com/ninenines/cowboy", {tag, "2.12.0"}}}
+	{b64fast, {git, "https://github.com/ArweaveTeam/b64fast.git", {ref, "58f0502e49bf73b29d95c6d02460d1fb8d2a5273"}}},
+	{jiffy, {git, "https://github.com/ArweaveTeam/jiffy.git", {ref, "74c956defa9116c85d76f77c3e9b5bd6de7bd39a"}}},
+	{cowboy, {git, "https://github.com/ninenines/cowboy", {tag, "2.12.0"}}},
+	{prometheus, "4.11.0"},
+	{prometheus_cowboy, "0.1.8"}
 ]}.
 
 {shell, [
-    {apps, [hb]}
+	{apps, [hb]}
 ]}.
 
 {eunit, [
-    {apps, [hb]}
+	{apps, [hb]}
 ]}.
 
 {eunit_opts, [verbose]}.
 
 {relx, [
-    {release, {'hb', "0.0.1"}, [hb, jiffy, cowboy, gun, b64fast]},
-    {include_erts, true},
-    {extended_start_script, true}
+	{release, {'hb', "0.0.1"}, [hb, jiffy, cowboy, gun, b64fast]},
+	{include_erts, true},
+	{extended_start_script, true}
 ]}.
