--- a/rebar.config
+++ b/rebar.config
@@ -34,7 +34,9 @@
 	{cowboy, {git, "https://github.com/ninenines/cowboy", {tag, "2.12.0"}}},
 	{prometheus, "4.11.0"},
 	{prometheus_cowboy, "0.1.8"},
-    {rocksdb, "1.8.0"}
+    {rocksdb, "1.8.0"},
+    {gproc, "0.9.0"},
+    {gun, "2.0.1"}
 ]}.
 
 {shell, [
@@ -48,7 +50,7 @@
 {eunit_opts, [verbose]}.
 
 {relx, [
-	{release, {'hb', "0.0.1"}, [hb, jiffy, cowboy, gun, b64fast]},
+	{release, {'hb', "0.0.1"}, [hb, jiffy, cowboy, gun, b64fast, rocksdb]},
 	{include_erts, true},
 	{extended_start_script, true}
 ]}.
